# main.go
@@ -8,6 +8,7 @@ import (
 	"github.com/FunnyKing1228/go-mercari-clone/database"
 	"github.com/FunnyKing1228/go-mercari-clone/middlewares"
 	"github.com/FunnyKing1228/go-mercari-clone/repository"
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 
 	//三個 Swagger 必備套件(注意 docs 路徑)
@@ -21,6 +22,9 @@ import (
 // @description 這是一個用 Go 寫的高併發拍賣網站 API 系統，具備 JWT 防護與資料庫悲觀鎖。
 // @host localhost:8080
 // @BasePath /
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func main() {
 	//在程式一啟動時，設定 slog 全域使用 JSON 格式輸出
 	logger := slog.New(slog.NewJSONHandler(os.Stdout, nil))
@@ -42,6 +46,15 @@ func main() {
 	r := gin.New()
 	r.Use(gin.Recovery())                 // Gin 內建的防崩潰保鏢
 	r.Use(middlewares.StructuredLogger()) // 我們剛剛自己寫的 JSON 紀錄員
+
+	// CORS 設定 (開發專用的無敵通行證)
+	r.Use(cors.New(cors.Config{
+		AllowAllOrigins:  true, //允許所有前端網域來拿資料
+		AllowMethods:     []string{"GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"},
+		AllowHeaders:     []string{"Origin", "Content-Type", "Authorization"}, // 允許攜帶 JWT Token
+		ExposeHeaders:    []string{"Content-Length"},
+		AllowCredentials: true,
+	}))
 
 	// 註冊 Swagger 專屬網址
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
